# corrqec-ldpc

./: .gitignore  LICENSE  README.md  pyproject.toml
play/: playing.ipynb
src/: __init__.py
